# PhaseNet-TF

./: pyproject.toml
configs/: train.yaml
configs/experiment/: alaska_tonga.yaml  alaska_tonga_wins.yaml  icer_dev.yaml  production_default_delta.yaml
configs/hydra/: inference_1n4g_a100.yaml  slurm_2n8g_v100.yaml  slurm_delta.yaml
configs/paths/: default.yaml
configs/trainer/: multiple_gpu_delta.yaml
src/: predict.py
src/data/components/: ai4eps.py  tsindex.py  utils.py
src/models/: core_module.py
wandb/: settings
