[tool.poetry]
name = "phasenet-tf"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
hydra-core = "^1.3.2"
lightning = "^2.0"
numpy = "^1.24.2"
pandas = "^2.0.0"
pyrootutils = "^1.0.4"
rich = "^13.3.4"
scipy = "^1.10.1"
segmentation-models-pytorch = "^0.3.2"
torch = "^2.0.0"
nnaudio = "^0.3.2"


[tool.poetry.group.train.dependencies]
h5py = "^3.8.0"
hydra-colorlog = "^1.2.0"
hydra-submitit-launcher = "^1.2.0"
matplotlib = "^3.7.1"
obspy = "^1.4.0"
sqlalchemy = "<2.0"
wandb = "^0.14.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
